--- a/src/index.html
+++ b/src/index.html
@@ -9,4 +9,6 @@ title: Frank Adam Laub
 	<div id="date">{{ first_post.date | date_to_string }}</div>
 	<h2><a href="{{ first_post.url }}">{{ first_post.title }}</a></h2>
 	{{ first_post.content }}
+	
+	<a id="more" href="{{ first_post.url }}#disqus">Comments &raquo;</a>	
 </div>
